--- a/UI/Main/MainWindow.xaml
+++ b/UI/Main/MainWindow.xaml
@@ -6,33 +6,44 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="10">
+        <StackPanel Grid.Row="0" Grid.ColumnSpan="2" Orientation="Horizontal" Margin="10">
             <Button Content="Load CSV" Command="{Binding ImportCommand}" Margin="5"/>
             <Button Content="To Excel" Command="{Binding ExportToExcelCommand}" Margin="5"/>
             <Button Content="To XML" Command="{Binding ExportToXmlCommand}" Margin="5"/>
         </StackPanel>
-        <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="10" VerticalAlignment="Bottom">
-            <Label Content="Date:" Width="10%" Margin="10"/>
-            <TextBox x:Name="DateTextBox" Grid.Column="1" Grid.Row="0" Margin="10"/>
-            <Label Content="First Name:" Grid.Column="0" Grid.Row="1" Margin="10"/>
-            <TextBox x:Name="FirstNameTextBox" Grid.Column="1" Grid.Row="1" Margin="10"/>
-            <Label Content="Last Name:" Grid.Column="0" Grid.Row="2" Margin="10"/>
-            <TextBox x:Name="LastNameTextBox" Grid.Column="1" Grid.Row="2" Margin="10"/>
-            <Label Content="Middle Name:" Grid.Column="0" Grid.Row="3" Margin="10"/>
-            <TextBox x:Name="MiddleNameTextBox" Grid.Column="1" Grid.Row="3" Margin="10"/>
-            <Label Content="City:" Grid.Column="0" Grid.Row="4" Margin="10"/>
-            <TextBox x:Name="CityTextBox" Grid.Column="1" Grid.Row="4" Margin="10"/>
-            <Label Content="Country:" Grid.Column="0" Grid.Row="5" Margin="10"/>
-            <TextBox x:Name="CountryTextBox" Grid.Column="1" Grid.Row="5" Margin="10"/>
-            
-            <Button Content="Apply" Command="{Binding ApplyFilter}" Margin="5"/>
 
+        <DataGrid Grid.Row="1" Grid.Column="0" ItemsSource="{Binding Entries}" AutoGenerateColumns="True"/>
+        
+        <StackPanel Grid.Row="1" Grid.Column="1" DockPanel.Dock="Right" Margin="10">
+            <TextBlock Text="Filter by:" FontWeight="Bold"/>
+            
+            <TextBlock Text="Date"/>
+            <TextBox x:Name="Date" Text="{Binding Date, UpdateSourceTrigger=PropertyChanged}"/>
+            
+            <TextBlock Text="First Name"/>
+            <TextBox x:Name="FirstName" Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}"/>
+
+            <TextBlock Text="Last Name"/>
+            <TextBox x:Name="LastName" Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}"/>
+
+            <TextBlock Text="Middle Name"/>
+            <TextBox x:Name="MiddleName" Text="{Binding MiddleName, UpdateSourceTrigger=PropertyChanged}"/>
+
+            <TextBlock Text="City"/>
+            <TextBox x:Name="City" Text="{Binding City, UpdateSourceTrigger=PropertyChanged}"/>
+
+            <TextBlock Text="Country"/>
+            <TextBox x:Name="Country" Text="{Binding Country, UpdateSourceTrigger=PropertyChanged}"/>
+
+            <Button Content="Apply Filter" Command="{Binding ApplyFilterCommand}" Margin="0,10,0,0"/>
         </StackPanel>
-        <DataGrid Grid.Row="2" ItemsSource="{Binding Entries}" AutoGenerateColumns="True"/>
     </Grid>
 </Window>
